[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bastion-compat"
version = "1.0.0"
description = "Check compatibility between home security devices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
web = [
    "flask>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bastion_compat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
